# fusionguide

./: .gitignore  README.md  pyproject.toml
fusionbal/: __init__.py  cli.py
fusionbal/priors/: fusionmatdb.py  physics_priors.py
fusionbal/spaces/: __init__.py  ceramic_insulator.py
fusionbal/targets/: __init__.py
fusionguide/: __init__.py  campaign.py  cli.py  facility_scheduler.py
fusionguide/priors/: __init__.py  fusionmatdb.py  physics_priors.py
fusionguide/spaces/: __init__.py  rafm_steel.py  vanadium_alloy.py
fusionguide/targets/: __init__.py  mechanical.py
fusionguide/visualise/: uncertainty_map.py
tests/: test_campaign.py  test_scheduler.py  test_spaces.py
