[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fusionbal"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "baybe[simulation]>=0.14.3",
    "torch>=2.1",
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.17",
    "click>=8.1",
    "pydantic>=2.0",
    "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fusionbal*"]

[project.scripts]
fusionbal = "fusionbal.cli:main"
